--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+section {
+  height: 100vh;
+  background-color: aliceblue;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.container {
+  width: 600px;
+  height: 500px;
+  box-shadow: 20px 20px 50px black;
+  border-radius: 15px;
+  margin: 0 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form {
+  margin-top: 30px;
+}
+.inputType {
+  width: 150px;
+  padding: 5px 25px;
+  border-radius: 5px;
+}
+button {
+  padding: 8px 15px;
+  border: none;
+  outline: none;
+  appearance: none;
+  cursor: pointer;
+  border: oldlace;
+  border-radius: 5px;
+  margin: 0 0 0 20px;
+  transition: 0.3s ease-in-out;
+}
+button:hover {
+  color: #fff;
+  background-color: grey;
+}
+.eachContent {
+  margin: 5px 0;
+}
+nav {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: gray;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+nav > ul {
+  list-style: none;
+}
+nav > ul > li {
+  cursor: pointer;
+  color: #fff;
+}
+nav > div > h2 {
+  cursor: pointer;
+}
+.homePage {
+  margin-top: 100px;
 }
